<resources>
    <string name="app_name">CommentSold Shahrukh</string>
    <string name="login">Login</string>
    <string name="products">Products</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="product_details">Product Details</string>
    <string name="retry">Retry</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="brand">Brand</string>
    <string name="shipping_price_in_cents">Shipping Price in cents</string>
    <string name="delete">Delete</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_confirmation_mesg">Are you sure you want to delete this product?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="styles">Styles</string>
    <string name="product_name">Product Name</string>
    <string name="product_desc">Product Description</string>
    <string name="product_style">Product Style</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_type">Product Type</string>
    <string name="product_price">Product Price</string>
    <string name="product_note">Product Note</string>
    <string name="logout">Logout</string>
    <string name="please_check_internent">Please check your internet connection</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="name_validation_mesg">Name cannot be empty</string>
    <string name="desc_validation_mesg">Description cannot be empty</string>
    <string name="style_validation_mesg">Select a style</string>
    <string name="brand_validation_mesg">Brand cannot be empty</string>
    <string name="shipping_price_validation_mesg">Shipping price cannot be empty</string>
    <string name="product_deleted_mesg">Product deleted successfully</string>
    <string name="product_updated_mesg">Product updated successfully</string>
    <string name="product_created_mesg">Product created successfully</string>
    <string name="inventory">Inventory</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="cost_price">Cost Price</string>
    <string name="dimension">Dimensions</string>
    <string name="details">Details</string>
    <string name="delete_inventory">Delete Inventory</string>
    <string name="delete_inventory_confirmation_mesg">Are you sure you want to delete this inventory?</string>
    <string name="sale_price_in_cents">Sale Price in cents</string>
    <string name="cost_price_in_cents">Cost Price in cents</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="price_in_cents">Price in cents</string>
    <string name="inventory_note">Inventory Note</string>
    <string name="note">Note</string>
    <string name="color_validation_mesg">Select a color</string>
    <string name="size_validation_mesg">Select a size</string>
    <string name="quantity_validation_mesg">Quantity cannot be empty</string>
    <string name="weight_validation_mesg">Weight cannot be empty</string>
    <string name="price_validation_mesg">Price cannot be empty</string>
    <string name="sale_price_validation_mesg">Sale Price cannot be empty</string>
    <string name="cost_price_validation_mesg">Cost Price cannot be empty</string>
    <string name="length_validation_mesg">Length cannot be empty</string>
    <string name="width_validation_mesg">Width cannot be empty</string>
    <string name="height_validation_mesg">Height cannot be empty</string>
    <string name="inventory_created_mesg">Inventory created successfully</string>
    <string name="inventory_updated_mesg">Inventory updated successfully</string>
    <string name="inventory_deleted_mesg">Inventory delete successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_not_found">User not found</string>
    <string name="weak_internet_connection">Weak internet connection</string>
    <string name="no_products_found">No Products found</string>
    <string name="no_inventory_found">No Inventory found</string>
    <string name="product">Product</string>
    <string name="product_selection_message">Select a product</string>
</resources>